--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   http: ^0.13.5
   flutter_bloc: ^8.0.0
+  equatable: ^2.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
