--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -18,7 +18,6 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
-
 environment:
   sdk: '>=2.18.4 <3.0.0'
 dependencies:
@@ -28,6 +27,7 @@ dependencies:
   http: ^0.13.5
   flutter_bloc: ^8.0.0
   equatable: ^2.0.5
+  sentry_flutter: ^6.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
