--- a/ui/android/app/build.gradle
+++ b/ui/android/app/build.gradle
@@ -30,7 +30,8 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
    }
 android {
     compileSdkVersion flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
+    // add ndkPath to your local properties file
+    ndkPath = localProperties.getProperty('ndkPath')
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -78,3 +79,4 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+android.buildTypes.release.ndk.debugSymbolLevel = 'FULL'
