--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_bloc: ^8.0.0
   equatable: ^2.0.5
   sentry_flutter: ^6.17.0
+  firebase_core: ^2.3.0
+  google_sign_in: ^5.4.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
