--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -27,9 +27,10 @@ dependencies:
   http: ^0.13.5
   flutter_bloc: ^8.0.0
   equatable: ^2.0.5
-  sentry_flutter: ^6.17.0
   firebase_core: ^2.3.0
   google_sign_in: ^5.4.2
+  firebase_auth: ^4.1.5
+  firebase_crashlytics: ^3.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
