--- a/api/Makefile
+++ b/api/Makefile
@@ -1,5 +1,6 @@
 .PHONY: test build_web build_console run_web
 
+all: clean test build_web
 
 clean:
 	rm -rf build/
@@ -9,14 +10,16 @@ test:
 bench:
 	go test ./... -bench=. -benchmem
 
+launch: all
+	go run ./cmd/web
 run_web:
 	go run ./cmd/web
 
 run_console:
 	go run ./cmd/console
 
-build_web: clean
+build_web: 
 	go build -o build/web ./cmd/web
 
-build_console: clean
+build_console:
 	go build -o build/console ./cmd/console
